# polyominos

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  avx_match.cpp  avx_match.hpp  avx_match_test.cpp  bazel-bin  bazel-out  bazel-polyominos  bazel-testlogs  bench.cpp  bit_records.cpp  bit_records.hpp  combinatorics.cpp  combinatorics.hpp  combinatorics_test.cpp  cu_main.cpp  deploy.sh  dl_matrix.cpp  dl_matrix.hpp  dl_matrix_test.cpp  foo.openscad  greeter_server.cpp  kernel.cu  kernel.h  loggers.cpp  loggers.hpp  openscad_template.openscad  partition_function.cpp  partition_function.hpp  polyominos.hpp  puzzle_maker.cpp  puzzle_solver.cpp  puzzle_solver.hpp  puzzle_solver_bench.cpp  puzzle_solver_test.cpp
.devcontainer/: Dockerfile  devcontainer.json
