###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "puzzle_solver",
    version = "0.0.1",
)

bazel_dep(name = "google_benchmark", version = "1.8.5")
# bazel_dep(name = "googletest", version = "1.15.2")
# bazel_dep(name = "re2", version = "2024-07-02.bcr.1")

bazel_dep(name = "platforms", version = "0.0.10")
# bazel_dep(name = "abseil-cpp", version = "20240722", repo_name="com_google_absl")
bazel_dep(name = "abseil-cpp", version = "20240722.0")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")
